Add support for multiple modules for streamlit pages, making it easier to expand
